--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -2059,15 +2059,6 @@ input[type="submit"]:hover {
 	-webkit-transform: skewX(-15deg);
 }
 .options-area .column.color-area li.orange a{background: #ef8d0d;}
-.options-area .column.color-area li.red a{background: #FF0000;}
-.options-area .column.color-area li.ripe_lemon a{background: #F4D81C;}
-.options-area .column.color-area li.gamboge a{background: #E49B0F;}
-.options-area .column.color-area li.pistachio a{background: #93c572;}
-.options-area .column.color-area li.robins_egg_blue a{background: #00CCCC;}
-.options-area .column.color-area li.denim a{background: #1560BD;}
-.options-area .column.color-area li.blue_gem a{background: #2C0E8C;}
-.options-area .column.color-area li.purple a{background: #660099;}
-.options-area .column.color-area li.shockingpink a{background: #FC0FC0;}
 .options-area .column.color-area li.yellow a{background: #f2df09;}
 .options-area .column.color-area li.green a{background: #42e317;}
 .options-area .column.color-area li.blue a{background: #19cad0;}
@@ -2940,8 +2931,6 @@ input[type="submit"]:hover {
 .tab-content2 .product-details{
 	overflow: hidden;
 	margin: 0 0 10px;
-	width: 67%;
-	float: left;
 	border-width: 0 1px 2px;
 	border-style: solid;
 	border-color: #d7d7d7 #eee;
@@ -2973,8 +2962,8 @@ input[type="submit"]:hover {
 }
 .tab-content2 .cart-area{
 	float: right;
-	width: 23%;
-	margin: 0 0 7px 16px;
+	width: 312px;
+	margin: 0 0 0 16px;
 	border-width: 0 1px 2px;
 	border-style: solid;
 	border-color: #d7d7d7 #eee;
@@ -3368,9 +3357,8 @@ input[type="submit"]:hover {
 	text-decoration: none;
 }
 .signup-form{
-	/*float: right;*/
-	width: 91%;
-
+	float: right;
+	width: 49%;
 	margin: 0;
 }
 .signup-form .row{
@@ -3642,6 +3630,164 @@ input[type="submit"]:hover {
 	list-style: none;
 }
 .shipping-methods li{margin: 0 0 15px;}
+.faq-area{
+	padding-bottom: 22px;
+	padding-top: 26px;
+	position: relative;
+}
+.faq-area:before{
+	position: absolute;
+	top: 0;
+	right: 15px;
+	left: 15px;
+	height: 4px;
+	background: #eee;
+	content: '';
+}
+.faq-area h3{
+	border-color: #d7d7d7;
+    border-style: solid;
+    border-width: 0 0 1px;
+    color: #fff;
+    font: bold 12px/22px "Roboto Condensed",Helvetica,Arial,sans-serif;
+    margin: 0 0 12px;
+    text-align: left;
+    text-transform: uppercase;
+}
+.faq-area h3 span{
+	background: #251709;
+    display: inline-block;
+    vertical-align: bottom;
+    padding: 0 15px;
+    position: relative;
+    min-width: 150px;
+}
+.faq-area h3 span:before {
+    border-color: transparent transparent transparent #251709;
+    border-style: solid;
+    border-width: 22px 0 0 6px;
+    content: "";
+    height: 0;
+    left: 100%;
+    position: absolute;
+    top: 0;
+    width: 0;
+}
+.faq-area .faq-frame{
+	margin: 0 0 12px;
+	padding: 0;
+	list-style: none;
+	overflow: hidden;
+	letter-spacing: -4px;
+	color: #000;
+    font: 11px/16px "Roboto Condensed",Helvetica,Arial,sans-serif;
+}
+.faq-area .faq-frame .open-close{
+	letter-spacing: normal;
+	display: inline-block;
+	vertical-align: top;
+	width: 31%;
+	margin: 0 2% 18px 0;
+}
+.faq-area .list{
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+.faq-area p{margin: 0 0 4px;}
+.faq-area .list li{
+	margin: 0 0 4px;
+	padding: 0 0 0 8px;
+	position: relative;
+}
+.faq-area .list li:before{
+	position: absolute;
+	top: 0;
+	left: 0;
+	content: '-';
+}
+.faq-area .openeer-holder{
+	margin: 0 0 12px;
+	overflow: hidden;
+}
+.faq-area .openeer-holder a{
+	position: relative;
+}
+.faq-area .openeer-holder .arrow{
+	min-width: 18px;
+    width: 6%;
+	height: 16px;
+	background: #000;
+	float: left;
+}
+.faq-area .openeer-holder .arrow:before{
+	position: absolute;
+	top: 0;
+	left: 100%;
+	width: 0;
+	height: 0;
+	border-style: solid;
+	border-width: 16px 8px 0 0;
+	border-color: #000 transparent transparent;
+	content: '';
+}
+.faq-area .openeer-holder .arrow:after{
+	position: absolute;
+	top: 6px;
+	left: 6px;
+	width: 0;
+	height: 0;
+	border-style: solid;
+	border-width: 6px 5px 0;
+	border-color: #fff transparent transparent;
+	content: '';
+}
+.faq-area .openeer-holder .question{
+	color: #858585;
+    font: 11px/13px "Roboto Condensed",Helvetica,Arial,sans-serif;
+    border: 2px solid #858585;
+    width: 94%;
+    text-align: center;
+    float: right;
+    margin: 0 -6px 0 0;
+    transform: skewX(-25deg);
+    -moz-transform: skewX(-25deg);
+    -ms-transform: skewX(-25deg);
+    -webkit-transform: skewX(-25deg);
+}
+.faq-area .openeer-holder .question span{
+	display: block;
+    transform: skewX(25deg);
+    -moz-transform: skewX(25deg);
+    -ms-transform: skewX(25deg);
+    -webkit-transform: skewX(25deg);
+    overflow: hidden;
+    padding: 0 5px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+.faq-area .openeer-holder .question span:before{
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	margin: 0 3px 0 0;
+	width: 2px;
+	background: #858585;
+	content: '';
+}
+.faq-area .openeer-holder .question:hover{
+	text-decoration: none;
+	background: #eee;
+}
+
+
+
+
+
+
+
+
 
 
 @media only screen and (max-width: 1199px) {
@@ -3684,6 +3830,7 @@ input[type="submit"]:hover {
 	#footer .footer-nav li{margin: 0 0 0 15px;}
 	#footer .footer-nav li:before{left: -9px;}
 	.cart-table-area td:first-child{padding-left: 30px;}
+	.faq-area .openeer-holder .question{width: 93%;}
 }
 @media only screen and (max-width: 991px) {
 	#wrapper > .container{padding: 0 15px;}
@@ -3740,6 +3887,8 @@ input[type="submit"]:hover {
 	.cart-table-area td:first-child {padding-left: 20px;}
 	.tab-content2 .options-area .column{width: 37%;}
 	.tab-content2 .column-content{padding: 8px 10px;}
+	.faq-area .openeer-holder .question span:before{margin: 0 4px 0 0;}
+	.faq-area .openeer-holder .question{width: 91%;}
 }
 @media only screen and (max-width: 767px) {
 	body { min-width: 768px; }
@@ -3747,23 +3896,4 @@ input[type="submit"]:hover {
 		margin-bottom: 0;
 		margin-top: 0;
 	}
-}
-/********* Add Custom Css**********************/
-.validation-advice
-{
-	color:red;
-}
-em{ color:red;}
-.input-box select
-{
-	 border-color: #e6e6e6;
-    bottom: 37px;
-    color: #222222;
-    font-family: "Roboto Condensed",sans-serif;
-    font-size: 12px;
-    height: 25px;
-    left: 68px;
-    position: relative;
-    top: -25px;
-    width: 232px;
 }
