--- a/skin/frontend/creo/default/custom.css
+++ b/skin/frontend/creo/default/custom.css
@@ -242,7 +242,7 @@
 	border-style: solid;
 	border-width: 0 0 0 4px;
 	color: #aaa;
-	margin: 0 6px 0 0;
+	margin: 0 13px 0 0;
 	overflow: hidden;
 	padding: 0;
 	width: 79.5%;
@@ -269,7 +269,7 @@
 	opacity: 1;
 }
 .product-detail .btn-holder .span2 {
-	font: bold 16px/36px "Roboto Condensed", Helvetica, Arial, sans-serif;
+	font: bold 14px/28px "Roboto Condensed", Helvetica, Arial, sans-serif;
 	text-transform: uppercase;
 }
 .product-detail .btn-holder .span2:before {
@@ -350,10 +350,11 @@
 
 .options-area label {
 	color: #222;
-	font: bold 15px/20px "Roboto Condensed", Helvetica, Arial, sans-serif;
+	font: 14px/20px "Roboto Condensed", Helvetica, Arial, sans-serif;
 	margin: 0 0 6px;
 	text-transform: uppercase;
 }
+
 .options-area label em {
 	display: none;
 }
@@ -600,7 +601,7 @@
 	-ms-transform: skewX(-20deg);
 	-webkit-transform: skewX(-20deg);
 	border: 2px solid #eee;
-	padding: 6px;
+	padding: 4px 6px;
 	display: block;
 	width: 100%;
 	margin-left: auto;
@@ -640,7 +641,7 @@
 	text-align: center;
 	color: #fff;
 	position: relative;
-	font:bold 12px/16px Arial, Helvetica, sans-serif;
+	font:bold 12px/12px Arial, Helvetica, sans-serif;
 	white-space: nowrap;
 }
 .checkout-cart-index .btn-holder .btn-proceed-checkout:before {
@@ -726,11 +727,11 @@
 
 .onestepcheckout-index-index .checkout_bottom_area { width:60%; float: left; text-transform: uppercase;}
 
-.onestepcheckout-index-index .checkout_bottom_area .subtotal { width: 45%; float: left;   border: 2px solid #eee;  display: block;   padding: 8px;}
+.onestepcheckout-index-index .checkout_bottom_area .subtotal { width: 45%; float: left;   border: 2px solid #eee;  display: block;   padding: 5px 8px;}
 .onestepcheckout-index-index .checkout_bottom_area .subtotal .title { float: left; } 
 .onestepcheckout-index-index .checkout_bottom_area .subtotal span { float: right; font-size:14px !important; line-height: 18px !important; font-size:14px; font-weight: normal !important ; } 
 
-.onestepcheckout-index-index .checkout_bottom_area .total { width: 45%; float: left;   border: 2px solid #eee;  display: block;   padding: 8px; margin: 0 0 0 10px;}
+.onestepcheckout-index-index .checkout_bottom_area .total { width: 45%; float: left;   border: 2px solid #eee;  display: block;   padding: 5px 8px; margin: 0 0 0 10px;}
 .onestepcheckout-index-index .checkout_bottom_area .total .title { float: left; } 
 .onestepcheckout-index-index .checkout_bottom_area .total span { float: right; font-size:14px !important; line-height: 18px !important; font-size:14px; font-weight: normal ; } 
 
@@ -760,7 +761,7 @@
     font-size: 16px;
     font-weight: bold;
     height: auto;
-    padding: 10px 100px;
+    padding: 8px 100px;
     width: auto; float: right;}
 .cate2.cate:nth-child(2) { }
 .cate2.cate:nth-child(2) a { border: none; background: none; }
@@ -879,7 +880,7 @@
     border: 4px solid #000;
     color: #fff;
     display: inline-block;
-    font: bold 16px/36px "Roboto Condensed",Helvetica,Arial,sans-serif;
+    font: bold 14px/28px "Roboto Condensed",Helvetica,Arial,sans-serif;
    /* position: relative;*/
     text-transform: uppercase;
     vertical-align: top;
@@ -967,3 +968,15 @@
 .minicartInnerUl li:first-child{display:none;}
 #nav .drop { left: 12px;}
 .featured-products img  { height: 165px !important; width: 100% !important;}
+
+.tab-content p {
+	font: 14px/20px "Roboto Condensed", Helvetica, Arial, sans-serif;
+}
+
+.page-header.checkout-form-headings {
+	margin-top:9px;
+}
+
+.page-header.checkout-form-headings > h1 {
+	margin-top:0;
+}
