--- a/skin/frontend/creo/default/custom.css
+++ b/skin/frontend/creo/default/custom.css
@@ -1034,7 +1034,7 @@
 .catalog-product-view  #tab2   table {
     border-collapse: separate;
     border-spacing: 10px 4px;
-	width: 400px;
+	width: 400px !important;
 }
 
 .catalog-product-view  #tab2  table>tbody>tr:nth-of-type(even) {
