--- a/app/design/frontend/creo_mobile/default/template/catalog/layer/view.phtml
+++ b/app/design/frontend/creo_mobile/default/template/catalog/layer/view.phtml
@@ -54,7 +54,7 @@
         <?php endif; ?>
          <?php echo $this->getStateHtml() ?>
         <?php if ($this->getLayer()->getState()->getFilters()): ?>
-            <div class="actions"><a href="<?php echo $this->getClearUrl() ?>"><?php echo $this->__('Clear All') ?></a></div>
+            <!-- <div class="actions"><a href="<?php echo $this->getClearUrl() ?>"><?php echo $this->__('Clear All') ?></a></div> -->
         <?php endif; ?>
    <?php /*?> </div><?php */?>
 <?php /*?></div><?php */?>
