--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -5543,7 +5543,7 @@ body.category-clothing #fme_filters_list .cate-open-close #design_category.slide
 .skewbtn1{background:#000;transform: skewX(-30deg);-moz-transform: skewX(-30deg);-ms-transform: skewX(-30deg);
 -webkit-transform: skewX(-30deg);padding:0;display:inline-block;padding:3px 7px;margin-left:5px;float:left;z-index:10;
 position: relative;}
-.skewbtn1 #goback{color:#fff;display:block;text-decoration:none;background-color:#000;font-size:12px;text-transform:uppercase;border:0;outline:none;line-height:1.2;
+.skewbtn1 #goback{color: #fff;background-color:#000;font-size:12px;text-transform:uppercase;border:0;outline:none;line-height:1.2;
 transform: skewX(30deg);-moz-transform: skewX(30deg);-ms-transform: skewX(30deg);-webkit-transform: skewX(30deg);}
 .skewbtn1:hover,.skewbtn1:hover #goback,.skewbtn1:focus,.skewbtn1:focus #goback{background-color:#ef4f61}
 .size_guide_men_image, .size_guide_women_image { max-width: 500px; width: 100%;}
@@ -5556,8 +5556,8 @@ transform: skewX(30deg);-moz-transform: skewX(30deg);-ms-transform: skewX(30deg)
 #fme_filters_list .cate-open-close #label_gender{border:0;cursor:none;pointer-events:none;}
 #fme_filters_list .cate-open-close #label_gender.opener:before{content:':';border:0;top:0;}
 #fme_filters_list .cate-open-close #label_phone_model.opener,
-#fme_filters_list .cate-open-close #label_notebook_material.opener{position: absolute;top: 0;margin-left:130px;}
-/*#fme_filters_list .cate-open-close #label_notebook_material.opener{margin-left:227px;}*/
+#fme_filters_list .cate-open-close #label_notebook_material.opener{position: absolute;top: 0;margin-left:110px;}
+#fme_filters_list .cate-open-close #label_notebook_material.opener{margin-left:227px;}
 /*#fme_filters_list .cate-open-close:hover ul{display: block;}*/
 /*#fme_filters_list .cate-open-close .slide li{width:32.3%;margin:0 0.5%;}*/
 #fme_filters_list .cate-open-close .slide li:hover a{background: #000;color: #fff;}
