--- a/app/locale/en_US/template/email/newsletter_subscr_success.html
+++ b/app/locale/en_US/template/email/newsletter_subscr_success.html
@@ -17,11 +17,11 @@
 <tr>
 <td colspan="3">
   <table width="100%" bgcolor="#f16b7a" cellpadding="0" cellspacing="0" border="0" style="width:100%; background:#f16b7a;">
-            <tr class="header">
-         <td align="center"  style="width:100%;  padding: 20px 0 5px;">
-         <img style="max-width:130px;" src="http://localmediauae.com/dev/creo-emailer/table-baesd/Creo-Emailer/images/logo.png">
+    <tr class="header">
+         <td align="center"  style="width:100%;padding:20px 0 5px;">
+         <img style="max-width:130px;" src="http://creoroom.com/skin/frontend/creo/default/images/logo.png">
          </td>
-         </tr>
+    </tr>
   </table>
  </td>
  </tr>
