--- a/app/design/frontend/creo/default/template/page/html/header.phtml
+++ b/app/design/frontend/creo/default/template/page/html/header.phtml
@@ -57,7 +57,7 @@ is_product_details_page = true;
 				$_cartQty = Mage::getSingleton('checkout/cart')->getItemsCount();
 				echo $_cartQty;
 				?>
-			</span>My Cart</a>
+			</span><?php echo $this->__('My Cart'); ?></a>
 			<?php echo $this->getChildHtml('minicart_head'); ?>
 			<!--<div class="slide js-slide-hidden">
 				<div class="product">
@@ -97,7 +97,7 @@ is_product_details_page = true;
 			</div>
 			<?php $islogedin = Mage::getSingleton('customer/session')->isLoggedIn() ?>
 			<?php if (!$islogedin): ?>
-			<a class="headerLogin ajaxlogin-login" href="<?php echo Mage::getBaseUrl(); ?>customer/account/login/">LOGIN</a>
+			<a class="headerLogin ajaxlogin-login" href="<?php echo Mage::getBaseUrl(); ?>customer/account/login/"><?php echo $this->__('LOGIN'); ?></a>
 			<!--               <a class="headerLogin ajaxlogin-login" href="<?php echo Mage::getBaseUrl(); ?>customer/account/login/">LOGIN</a>
 			-->            <?php else: ?>
 			<div class="open-close login-area">
