--- a/skin/frontend/creo/default/style-ar.css
+++ b/skin/frontend/creo/default/style-ar.css
@@ -17,19 +17,20 @@ footer#footer{direction:rtl;}
 #header .basic-open-close ul,.tab-content2 .column-content .edit-icon{right:inherit;left:0;}
 .searchautocomplete .searchautocomplete-placeholder:before{left:30px;}
 #nav ol > li,#nav .featured-items .featured-products li,#footer .column,#footer .social li,.price-area .price-info,
-.faq-area.return-area .step-col li,.signup-form .row .col,.form-holder .form-frame,.nav li, form li{float:right;}
+.faq-area.return-area .step-col li,.signup-form .row .col,.form-holder .form-frame,.nav li, form li,.checkoutShippingMethod ul li input,
+.checkoutShippingMethod ul li label{float:right;}
 #nav .links-area .sorting-items{margin-left:15px;text-align:right;}
 #footer .column.column1{width:auto;}
 .product-detail .btn-holder button:first-child .span1{margin-left:0;margin-right:10px;}
 .products-grid .btn-holder a:first-child .span1{margin-left:0;margin-right:-10px;}
 .category--heading span:before,.shipping-methods h3 span:before, #last_most_view_title > h3 span:before,.faq-area h3 span:before,
-.tab-content2 .dark-heading span:before{border-color: transparent #000 transparent #000;border-width: 30px 6px 0 0px;left:inherit;
-right:100%;}
+.tab-content2 .dark-heading span:before,.three-column h3 span:before{border-color: transparent #000 transparent #000;
+border-width: 30px 6px 0 0px;left:inherit;right:100%;}
 .faq-area h3 span:before{border-width: 22px 6px 0 0px;}
-.tab-content2 .dark-heading span:before{border-width:20px 6px 0 0px;}
+.tab-content2 .dark-heading span:before,.three-column h3 span:before{border-width:20px 6px 0 0px;}
 .toolbar .sort-by select, .category_top_filters .sort-by select{font-size:12px;}
 #nav .links-area .links,.faq-area .faq-frame.terms .openeer-holder .question,
-.shipping-methods h3, #last_most_view_title > h3,.faq-area h3,.tab-content2 .dark-heading{text-align:right;}
+.shipping-methods h3, #last_most_view_title > h3,.faq-area h3,.tab-content2 .dark-heading,.three-column h3{text-align:right;}
 .order-details-table th:first-child{text-align:center;}
 .product-detail .price-area .availability{float:left;}
 .catalog-product-view .text-area .qty-area label{display:block;}
@@ -44,3 +45,5 @@ right:100%;}
 .checkout-form .form-group input, .checkout-form .inner-form select, .checkout-form .form-group select{padding-right:30px;}
 #checkout-payment-method-load .paymentradiobutton, #checkout-payment-method-load .paymentradiobuttonlabel{float:none;
 white-space:nowrap;}
+.cart-btn-area .btn-holder .button2 .span2, .cart-btn-area .btn-holder .button2:first-child .span2{padding-left:25px;}
+#header .login-area .opener{white-space:nowrap;}
